--- a/frens-web/package.json
+++ b/frens-web/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-select": "^4.3.1",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "usestate": "^1.1.3",
