--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
