--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-macros": "^3.1.0"
   }
 }
