--- a/frens-web/package.json
+++ b/frens-web/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-dom": "^17.0.2"
   }
 }
