--- a/frens-web/package.json
+++ b/frens-web/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
     "react-select": "^4.3.1",
     "redux": "^4.1.0",
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
