--- a/frens-web/package.json
+++ b/frens-web/package.json
@@ -49,8 +49,6 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-macros": "^3.1.0",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "babel-plugin-macros": "^3.1.0"
   }
 }
