--- a/frens-web/package.json
+++ b/frens-web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "fast-csv": "^4.3.6",
     "framer-motion": "^4.1.17",
     "gsap": "^3.6.1",
     "react": "^17.0.2",
