--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "server": "nodemon server.js",
     "heroku-postbuild": "cd frens-web && npm install && npm run build"
   },
@@ -19,10 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
+    "kmodes": "^1.0.11",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
+    "pandas-js": "^0.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
