--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "dotenv-extended": "^2.9.0",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
